fix: fix white square on the right bottom corner in scrollbars

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -71,3 +71,7 @@ li {
   border-radius: $scrollbar-width;
   border: solid $scrollbar-width transparent;
 }
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
